Avoid page jumping when scrollbar comes/goes

--- a/site/src/assets/sass/app.scss
+++ b/site/src/assets/sass/app.scss
@@ -23,6 +23,13 @@
   box-sizing: border-box;
 }
 
+@media screen and (min-width: 960px) {
+  html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+  }
+}
+
 @import "spinner";
 
 @import "components/breadcrumb";
